confs/cv/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cv 
    labels:
        app: cv
spec:
    ports:
        - port: 80 
    selector:
        app: cv
