confs/cv/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cv-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10000G
spec:
  ingressClassName: nginx
  rules:
  - host: cv.atweek.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv
            port:
              number: 80
  tls:
  - hosts:
     - cv.atweek.work
    secretName: ssl-cert-production
